Fix: Sidebar collapse button alignment and graphic functionality

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -123,7 +123,7 @@ header {
     width: 100%;
     height: 40px; /* Explicit height for the header */
     display: flex;
-    justify-content: flex-start; /* Align collapse button to the left */
+    justify-content: flex-end; /* Align collapse button to the right */
     box-sizing: border-box; /* Include padding in width calculation */
 }
 
